--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StillBirthPrediction",
+  "name": "RealTimeClimateAnalysis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
